tests/output/self_hosted/paren_unclosed_error.txt
tests/paren_unclosed_error.oomph:1: error: missing ')'

    ([]
    ^

assert() failed in "self_hosted/error.oomph", line N
